force-app/main/default/objects/Scholarship_Recipient__c/Scholarship_Recipient__c.object-meta.xml
<CustomObject>
    <description>This object holds data about specific of Scholarship Recipients</description>
    <label>Scholarship Recipient</label>
    <nameField>
        <displayFormat>SR-{00000000}</displayFormat>
        <label>Scholarship Recipient Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scholarship Recipients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>