force-app/main/default/objects/Scholarship_Recipient__c/fields/ACTV_ADDR__c.field-meta.xml
<CustomField>
    <fullName>ACTV_ADDR__c</fullName>
    <label>Current Address</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>School</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>