force-app/main/default/objects/Scholarship_Recipient__c/fields/CHECK_ADDR_PREF__c.field-meta.xml
<CustomField>
    <fullName>CHECK_ADDR_PREF__c</fullName>
    <label>Mail Check To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>School</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>