force-app/main/default/objects/Scholarship_Recipient__c/fields/CUR_YR_AMT_AWARD__c.field-meta.xml
<CustomField>
    <fullName>CUR_YR_AMT_AWARD__c</fullName>
    <label>Current Year Amt</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>