force-app/main/default/objects/Scholarship_Recipient__c/fields/CUR_YR_NUM_AWARD__c.field-meta.xml
<CustomField>
    <fullName>CUR_YR_NUM_AWARD__c</fullName>
    <label>Current Year #</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>