force-app/main/default/objects/Scholarship_Recipient__c/fields/HOME_CITY__c.field-meta.xml
<CustomField>
    <fullName>HOME_CITY__c</fullName>
    <label>City</label>
    <length>28</length>
    <type>Text</type>
</CustomField>