force-app/main/default/objects/Scholarship_Recipient__c/fields/HOME_EMAIL_ADDR__c.field-meta.xml
<CustomField>
    <fullName>HOME_EMAIL_ADDR__c</fullName>
    <label>Email</label>
    <length>320</length>
    <type>LongTextArea</type>
</CustomField>