force-app/main/default/objects/Scholarship_Recipient__c/fields/HOME_ST__c.field-meta.xml
<CustomField>
    <fullName>HOME_ST__c</fullName>
    <label>State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>