force-app/main/default/objects/Scholarship_Recipient__c/fields/HOME_WORK_PHONE__c.field-meta.xml
<CustomField>
    <fullName>HOME_WORK_PHONE__c</fullName>
    <label>Work Phone</label>
    <length>25</length>
    <type>Text</type>
</CustomField>