force-app/main/default/objects/Scholarship_Recipient__c/fields/LAST_AWARD_DATEDB__c.field-meta.xml
<CustomField>
    <fullName>LAST_AWARD_DATEDB__c</fullName>
    <label>Last Award Date</label>
    <type>Date</type>
</CustomField>