force-app/main/default/objects/Scholarship_Recipient__c/fields/ONE_RCPNT_ID__c.field-meta.xml
<CustomField>
    <fullName>ONE_RCPNT_ID__c</fullName>
    <description>The ID from the summit.rcpnt table in one, used for external joins</description>
    <externalId>true</externalId>
    <label>ONE RCPNT ID</label>
    <length>9</length>
    <type>Text</type>
</CustomField>