force-app/main/default/objects/Scholarship_Recipient__c/fields/RCPNT_COLL__c.field-meta.xml
<CustomField>
    <fullName>RCPNT_COLL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>College</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ucinn_ascendv2__Academic_Organization__c.ucinn_ascendv2__Type__c</field>
            <operation>equals</operation>
            <value>Academic Org</value>
        </filterItems>
        <filterItems>
            <field>ucinn_ascendv2__Academic_Organization__c.Fund_Source__c</field>
            <operation>equals</operation>
            <value>Degree College</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ucinn_ascendv2__Academic_Organization__c</referenceTo>
    <relationshipLabel>Scholarship Recipients</relationshipLabel>
    <relationshipName>Scholarship_Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>