force-app/main/default/objects/Scholarship_Recipient__c/fields/RCPNT_CURR__c.field-meta.xml
<CustomField>
    <fullName>RCPNT_CURR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Curriculum</label>
    <referenceTo>ucinn_ascendv2__Post_Code__c</referenceTo>
    <relationshipLabel>Scholarship Recipients</relationshipLabel>
    <relationshipName>Scholarship_Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>