force-app/main/default/objects/Scholarship_Recipient__c/fields/RCPNT_DEPT_CD__c.field-meta.xml
<CustomField>
    <fullName>RCPNT_DEPT_CD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ucinn_ascendv2__Academic_Organization__c.Fund_Source__c</field>
            <operation>equals</operation>
            <value>Degree Department</value>
        </filterItems>
        <filterItems>
            <field>ucinn_ascendv2__Academic_Organization__c.ucinn_ascendv2__Type__c</field>
            <operation>equals</operation>
            <value>Department</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ucinn_ascendv2__Academic_Organization__c</referenceTo>
    <relationshipLabel>Scholarship Recipients (Department)</relationshipLabel>
    <relationshipName>Scholarship_Recipients_Dept</relationshipName>
    <type>Lookup</type>
</CustomField>