force-app/main/default/objects/Scholarship_Recipient__c/fields/RCPNT_ID__c.field-meta.xml
<CustomField>
    <fullName>RCPNT_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Scholarship Recipients</relationshipLabel>
    <relationshipName>Scholarship_Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>