force-app/main/default/objects/Scholarship_Recipient__c/fields/RCPNT_NOTE__c.field-meta.xml
<CustomField>
    <fullName>RCPNT_NOTE__c</fullName>
    <label>Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>