force-app/main/default/objects/Scholarship_Recipient__c/fields/SCHL_PHONE__c.field-meta.xml
<CustomField>
    <fullName>SCHL_PHONE__c</fullName>
    <label>Phone</label>
    <length>25</length>
    <type>Text</type>
</CustomField>