force-app/main/default/objects/Scholarship_Recipient__c/fields/SCHL_ZIP__c.field-meta.xml
<CustomField>
    <fullName>SCHL_ZIP__c</fullName>
    <label>Zip/Postal</label>
    <length>15</length>
    <type>Text</type>
</CustomField>